# VitaBrowser-Lite

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml  main.yml  msvc.yml
sce_sys/livearea/contents/: template.xml
sce_system/contents/: template.xml
src/: index.html  main.c  main.cpp  server.js
